# dbfetch

./: .gitignore  MANIFEST.in  README.md  awair-plot.py  awair.py  covid-plot.py  covid.py  dbfetch.ini.dist  dbfetch.py  models.py  pmsa-plot.py  pmsa.py  requirements2.txt  requirements3.txt  run.py  setup.cfg
.github/workflows/: tests.yaml
dbfetch/: __main__.py  fetch.py  model.py  models.py  plot.py  request.py  storage.py
dbfetch/examples/: __init__.py  awair.yml  covid.yml  pmsa.yml
dbfetch/models/: awair.py  covid.py  pmsa.py
dbfetch/mqtt/: __main__.py
dbfetch/plot/: __init__.py  awair.py  covid.py  pmsa.py
dbfetch/request/: __init__.py  awair.py  covid.py  pmsa.py
models/: awair.yml  covid.yml  ha.yml  i2cerv.yml  pmsa.yml  waqi.yml
tests/: fake_model.py  test_examples.py  test_fetch.py  test_model.py  test_plot.py  test_storage.py
