[metadata]
name = dbfetch-indigoparadox
version = v0.21.3.6
description = Modular database storage and graph plotting
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/indigoparadox/dbfetch
protect_urls =
   Bug Tracker = https://github.com/indigoparadox/dbfetch/issues
classifiers =
   Programming Language :: Python :: 2
   Programming Language :: Python :: 3
   Development Status :: 4 - Beta
   License :: OSI Approved :: GNU General Public License v3 (GPLv3)
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 2.7
include_package_data = True
zip_safe = False

[options.entry_points]
console_scripts =
   dbfetch = dbfetch.__main__:main
